@@ -1,3 +1,4 @@
+* Manage selection_change_with on Selection and Reference fields
 * Add Dict fields on form
 * Remove Goto
 * Add global search
